<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:title="@string/PreventOrientationChange_prefernces"
        android:key="orientationKey" />
    <EditTextPreference
        android:defaultValue="Default value"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/summaryYourName_preferneces"
        android:title="@string/yourName_preferences"
        android:key="yourNameKey" />
    <EditTextPreference
        android:defaultValue="Default value"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/summaryStartNumber_preferneces"
        android:title="@string/TheNumberStart_prefernces"
        android:key="startNumberKey" />
</PreferenceScreen>